--- a/verstka.html
+++ b/verstka.html
@@ -1,2 +1,26 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8" />
+  <title>HTML5</title>
+<link rel="stylesheet" href="sdf.css" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap" rel="stylesheet">
+ </head>
+ <body>
+<header>
+  <div class="hrefss"><a href="#">Мой дом</a><a href="#">О сервисе</a><a href="#">Контакты</a></div>
+  <div class="box">
+    <div class="abblock"><img id="logomain"src="smartyzet.png" alt="logotype">
+    <p id="about">Сервис для курирования своими
+  датчиками и защитой дома</p></div>
+     <img id="lptp"src="laptop.png" alt="laptop image">
+  </div>
+
+</header>
+ </body>
+</html>
