--- a/verstka.html
+++ b/verstka.html
@@ -15,10 +15,10 @@
 <header>
   <div class="hrefss"><a href="#">Мой дом</a><a href="#">О сервисе</a><a href="#">Контакты</a></div>
   <div class="box">
-    <div class="abblock"><img id="logomain"src="smartyzet.png" alt="logotype">
+    <div class="abblock"><img id="logomain"src="img/smartyzet.png" alt="logotype">
     <p id="about">Сервис для курирования своими
   датчиками и защитой дома</p></div>
-     <img id="lptp"src="laptop.png" alt="laptop image">
+     <img id="lptp"src="img/laptop.png" alt="laptop image">
   </div>
 
 </header>
